crates/biome_js_parser/tests/js_test_suite/ok/import_call.js
import("foo")
import("foo", { with: { type: 'json' } })
import("foo", { with: { 'resolution-mode': 'import' } })
