crates/biome_js_parser/tests/js_test_suite/error/import_invalid_args.js
import()
import(...["foo"])
import("foo", { assert: { type: 'json' } }, "bar")
import("foo", { with: { type: 'json' } }, "bar")
